--- a/package.json
+++ b/package.json
@@ -1,72 +1,21 @@
 {
-  "private": true,
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-eslint": "8.2.1",
-    "babel-generator": "^6.26.0",
-    "babel-jest": "22.4.1",
-    "babel-plugin-syntax-trailing-function-commas": "^6.20.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.18.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-parameters": "^6.23.0",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-fbjs": "^2.1.0",
-    "chalk": "^1.1.3",
-    "codecov": "^2.2.0",
-    "eslint": "4.17.0",
-    "eslint-config-fb-strict": "22.1.0",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-flowtype": "2.43.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "21.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.6.1",
-    "eslint-plugin-relay": "0.0.21",
-    "flow-bin": "^0.67.1",
-    "glob": "^7.1.1",
-    "istanbul-api": "^1.1.0",
-    "istanbul-lib-coverage": "^1.0.0",
-    "jest": "22.4.2",
-    "lerna": "2.4.0",
-    "micromatch": "^2.3.11",
-    "mkdirp": "^0.5.1",
-    "prettier": "1.9.1",
-    "promise": "^7.1.1",
-    "sinon": "^2.2.0",
-    "temp": "^0.8.3"
+  "version": "0.30.2",
+  "name": "metro-source-map",
+  "description": "🚇 Source map generator for Metro.",
+  "main": "src/source-map.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:facebook/metro.git"
   },
   "scripts": {
-    "build-clean": "rm -rf ./packages/*/build",
-    "build": "node ./scripts/build.js",
-    "clean-all": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules && yarn run build-clean",
-    "jest-coverage": "yarn run jest --coverage",
-    "lint": "eslint . --cache",
-    "lint-fix": "eslint . --fix --cache",
-    "postinstall": "node ./scripts/build.js",
-    "publish": "yarn run build-clean && yarn run build && lerna run prepare-release && yarn run publish-packages",
-    "publish-packages": "(set -e; for dir in packages/*; do (cd \"$dir\" && npm publish); done)",
-    "postpublish": "lerna run cleanup-release",
-    "test-ci": "yarn run typecheck && yarn run lint && yarn run build && yarn run jest-coverage -i && node scripts/mapCoverage.js && codecov",
-    "test": "yarn run typecheck && yarn run lint && yarn run build && yarn run jest",
-    "typecheck": "flow check",
-    "watch": "yarn run build --silent && node ./scripts/watch.js"
+    "prepare-release": "test -d build && rm -rf src.real && mv src src.real && mv build src",
+    "cleanup-release": "test ! -e build && mv src build && mv src.real src"
   },
-  "workspaces": [
-    "packages/*"
-  ],
-  "jest": {
-    "modulePathIgnorePatterns": [
-      "packages/.*/build"
-    ],
-    "testEnvironment": "node",
-    "timers": "fake",
-    "setupFiles": [
-      "<rootDir>/scripts/setupJest.js"
-    ]
+  "dependencies": {
+    "source-map": "^0.5.6"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-generator": "^6.26.0"
   }
 }
